--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author Settings
 author: Ilias Slimani # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+author-img: ilias-slimani.jpg # add your photo
+about-author: I am a student in software engineering field, focusing on Java Technologies and Linux Operating System. Nowadays, I spend most of my free time learning and working with Spring Technologies and AngularJs4 . Always hungry to keep learning. Also, I am an avid reader. # add description
 twitter: # add your Twitter handle
 facebook: # add your Facebook handle
-github: artemsheludko # add your Github handle
+github: ISlimani # add your Github handle
 linkedin: # add your Linkedin handle
-email: # add your Email address
+email: ilias.slimani@edu.uiz.ac.ma# add your Email address
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
