--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-title: Hello, world! I'm David Freeman
+title: Java Web and Linux Tutorials
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Tutorials for Spring Framework and Linux Os. It provides simple follow-up and walkthroughs videos.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
@@ -10,12 +8,12 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # Author Settings
 author: Ilias Slimani # add your name
 author-img: ilias-slimani.jpg # add your photo
-about-author: I am a student in software engineering field, focusing on Java Technologies and Linux Operating System. Nowadays, I spend most of my free time learning and working with Spring Technologies and AngularJs4 . Always hungry to keep learning. Also, I am an avid reader. # add description
+about-author: I am a student in software engineering field, focusing on Java Technologies and Linux Operating System. Nowadays, I spend most of my free time learning and working with Spring Technologies and AngularJs4 . Always hungry to keep learning. # add description
 twitter: # add your Twitter handle
 facebook: # add your Facebook handle
 github: ISlimani # add your Github handle
 linkedin: # add your Linkedin handle
-email: ilias.slimani@edu.uiz.ac.ma# add your Email address
+email: ilias.slimani@edu.uiz.ac.ma # add your Email address
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
