add disqus support

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ linkedin: # add your Linkedin handle
 email: ilias.slimani@edu.uiz.ac.ma # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: iliasslimani # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
