--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Tutorials for Spring Framework and Linux Os. It provides simple follow-up and walkthroughs videos.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://slimanitech.me" # the base hostname & protocol for your site, e.g. http://example.com
+enforce_ssl: slimanitech.me
 
 # Author Settings
 author: Ilias Slimani # add your name
