--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ enforce_ssl: slimanitech.me
 # Author Settings
 author: Ilias Slimani # add your name
 author-img: ilias-slimani.jpg # add your photo
-about-author: I am a software engineer student, focusing on Java Technologies and Linux Operating System. Nowadays, I spend most of my free time learning and working with Spring Technologies and AngularJs4 . Always hungry to keep learning. # add description
+about-author: I am a software engineer student, focusing on Java Technologies and Linux Operating System. Nowadays, I spend most of my free time learning and working with Spring Technologies and Angular4 . Always hungry to keep learning. # add description
 twitter: # add your Twitter handle
 facebook: # add your Facebook handle
 github: ISlimani # add your Github handle
