--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,8 @@ markdown: kramdown
 plugins:
   - jekyll-sitemap
   - jekyll-paginate
-
+gems:
+  - jekyll-pdf
 paginate: 8
 paginate_path: "/page/:num"
 
